Bug 1283915 - Preserve input selection properties after type change. r=smaug

MozReview-Commit-ID: 7xJKc3vIpTY